// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dotcom-ui-header/src/components/StickyHeader renders ASK FT button 1`] = `
<header
  aria-hidden="true"
  className="o-header o-header--simple o-header--sticky o--if-js"
  data-o-component="o-header"
  data-o-header--sticky={true}
>
  <div
    className="o-header__row o-header__top"
    data-trackable="header-sticky"
  >
    <div
      className="o-header__container"
    >
      <div
        className="o-header__top-wrapper"
      >
        <div
          className="o-header__top-column o-header__top-column--left"
        >
          <a
            aria-controls="o-header-drawer"
            className="o-header__top-icon-link o-header__top-icon-link--menu"
            data-trackable="drawer-toggle"
            href="#"
            tabIndex={-1}
          >
            <span
              className="o-header__top-link-label"
            >
              Menu
            </span>
          </a>
          <a
            aria-controls="o-header-search-sticky"
            className="o-header__top-icon-link o-header__top-icon-link--search"
            data-trackable="search-toggle"
            href="#"
            tabIndex={-1}
          >
            <span
              className="o-header__top-link-label"
            >
              Search
            </span>
          </a>
          <a
            className="o3-button o3-button--primary ft-header__ask-ft-button ft-header__ask-ft-button--sticky o3-button--small o3-button-icon o3-button-icon--sparkles o3-apply-focus-rings"
            data-o3-theme="neutral"
            data-trackable="ask-ft-button-sticky"
            href="https://ask.ft.com"
            id="ask-ft-button-sticky"
            tabindex="-1"
          >
            Ask FT
          </a>
        </div>
        <div
          className="o-header__top-column o-header__top-column--center"
        >
          <div
            className="o-header__top-takeover"
          >
            <div
              className="o-header__nav"
            >
              <ul
                className="o-header__nav-list o-header__nav-list--left"
                data-trackable="primary-nav"
              >
                <li
                  className="o-header__nav-item"
                >
                  <a
                    className="o-header__nav-link o-header__nav-link--primary"
                    data-trackable="Home"
                    href="/"
                    tabIndex={-1}
                  >
                    Home
                  </a>
                </li>
                <li
                  className="o-header__nav-item"
                >
                  <a
                    className="o-header__nav-link o-header__nav-link--primary"
                    data-trackable="World"
                    href="/world"
                    tabIndex={-1}
                  >
                    World
                  </a>
                </li>
                <li
                  className="o-header__nav-item"
                >
                  <a
                    className="o-header__nav-link o-header__nav-link--primary"
                    data-trackable="UK"
                    href="/world/uk"
                    tabIndex={-1}
                  >
                    UK
                  </a>
                </li>
                <li
                  className="o-header__nav-item"
                >
                  <a
                    className="o-header__nav-link o-header__nav-link--primary"
                    data-trackable="Companies"
                    href="/companies"
                    tabIndex={-1}
                  >
                    Companies
                  </a>
                </li>
                <li
                  className="o-header__nav-item"
                >
                  <a
                    className="o-header__nav-link o-header__nav-link--primary"
                    data-trackable="Tech"
                    href="/technology"
                    tabIndex={-1}
                  >
                    Tech
                  </a>
                </li>
                <li
                  className="o-header__nav-item"
                >
                  <a
                    className="o-header__nav-link o-header__nav-link--primary"
                    data-trackable="Markets"
                    href="/markets"
                    tabIndex={-1}
                  >
                    Markets
                  </a>
                </li>
                <li
                  className="o-header__nav-item"
                >
                  <a
                    className="o-header__nav-link o-header__nav-link--primary"
                    data-trackable="Graphics"
                    href="/graphics"
                    tabIndex={-1}
                  >
                    Graphics
                  </a>
                </li>
                <li
                  className="o-header__nav-item"
                >
                  <a
                    className="o-header__nav-link o-header__nav-link--primary"
                    data-trackable="Opinion"
                    href="/opinion"
                    tabIndex={-1}
                  >
                    Opinion
                  </a>
                </li>
                <li
                  className="o-header__nav-item"
                >
                  <a
                    className="o-header__nav-link o-header__nav-link--primary"
                    data-trackable="Work & Careers"
                    href="/work-careers"
                    tabIndex={-1}
                  >
                    Work & Careers
                  </a>
                </li>
                <li
                  className="o-header__nav-item"
                >
                  <a
                    className="o-header__nav-link o-header__nav-link--primary"
                    data-trackable="Life & Arts"
                    href="/life-arts"
                    tabIndex={-1}
                  >
                    Life & Arts
                  </a>
                </li>
                <li
                  className="o-header__nav-item"
                >
                  <a
                    className="o-header__nav-link o-header__nav-link--primary"
                    data-trackable="HTSI"
                    href="https://howtospendit.ft.com/"
                    tabIndex={-1}
                  >
                    HTSI
                  </a>
                </li>
              </ul>
            </div>
          </div>
          <a
            className="o-header__top-logo o-header__hide--L"
            data-trackable="logo"
            href="/"
            tabIndex={-1}
            title="Go to Financial Times homepage"
          >
            <span
              className="o-header__visually-hidden"
            >
              Financial Times
            </span>
          </a>
        </div>
        <div
          className="o-header__top-column o-header__top-column--right"
        >
          <a
            className="o-header__top-button o-header__top-button--hide-m"
            data-trackable="Subscribe"
            href="/products?segmentId=#"
            role="button"
            tabIndex={-1}
          >
            Subscribe
          </a>
          <a
            className="o-header__top-myaccount"
            data-trackable="My Account"
            href="/myaccount"
            id="o-header-top-link-myaccount"
            tabIndex={-1}
          >
            <span>
              My Account
            </span>
          </a>
        </div>
      </div>
    </div>
  </div>
  <div
    className="o-header__row o-header__search o-header__search--sticky"
    data-o-header-search={true}
    data-trackable="header-search"
    id="o-header-search-sticky"
  >
    <div
      className="o-header__container"
    >
      <form
        action="/search"
        aria-label="Site search"
        className="o-header__search-form"
        data-n-topic-search={true}
        role="search"
      >
        <label
          className="o-header__search-term o-forms-field o-forms-field--optional"
          htmlFor="o-header-search-term-sticky"
        >
          <span
            className="o-forms-title o-header__visually-hidden"
          >
            <span
              className="o-forms-title__main"
            >
              Search the 
              <abbr
                title="Financial Times"
              >
                FT
              </abbr>
            </span>
          </span>
          <span
            className="o-forms-input o-forms-input--text o-forms-input--suffix"
          >
            <input
              aria-controls="suggestions-o-header-search-term-sticky"
              autoCapitalize="off"
              autoComplete="off"
              autoCorrect="off"
              id="o-header-search-term-sticky"
              name="q"
              placeholder="Search for stories, topics or securities"
              role="combobox"
              spellCheck={false}
              type="search"
            />
            <button
              className="o-header__search-submit"
              type="submit"
            >
              <span
                aria-hidden="true"
                className="o-header__search-icon"
              />
              <span>
                Search
              </span>
            </button>
            <button
              aria-controls="o-header-search-sticky"
              className="o-header__search-close o--if-js"
              data-trackable="close"
              title="Close search bar"
              type="button"
            >
              <span
                className="o-header__visually-hidden"
              >
                Close search bar
              </span>
              <span>
                Close
              </span>
            </button>
          </span>
        </label>
      </form>
    </div>
  </div>
</header>
`;

exports[`dotcom-ui-header/src/components/StickyHeader renders FT Pro dropdown menu 1`] = `
<header
  aria-hidden="true"
  className="o-header o-header--simple o-header--sticky o--if-js"
  data-o-component="o-header"
  data-o-header--sticky={true}
>
  <div
    className="o-header__row o-header__top"
    data-trackable="header-sticky"
  >
    <div
      className="o-header__container"
    >
      <div
        className="o-header__top-wrapper"
      >
        <div
          className="o-header__top-column o-header__top-column--left"
        >
          <a
            aria-controls="o-header-drawer"
            className="o-header__top-icon-link o-header__top-icon-link--menu"
            data-trackable="drawer-toggle"
            href="#"
            tabIndex={-1}
          >
            <span
              className="o-header__top-link-label"
            >
              Menu
            </span>
          </a>
          <a
            aria-controls="o-header-search-sticky"
            className="o-header__top-icon-link o-header__top-icon-link--search"
            data-trackable="search-toggle"
            href="#"
            tabIndex={-1}
          >
            <span
              className="o-header__top-link-label"
            >
              Search
            </span>
          </a>
        </div>
        <div
          className="o-header__top-column o-header__top-column--center"
        >
          <div
            className="o-header__top-takeover"
          >
            <div
              className="o-header__nav"
            >
              <ul
                className="o-header__nav-list o-header__nav-list--left"
                data-trackable="primary-nav"
              >
                <li
                  className="o-header__nav-item"
                >
                  <a
                    className="o-header__nav-link o-header__nav-link--primary"
                    data-trackable="Home"
                    href="/"
                    tabIndex={-1}
                  >
                    Home
                  </a>
                </li>
                <li
                  className="o-header__nav-item"
                >
                  <a
                    className="o-header__nav-link o-header__nav-link--primary"
                    data-trackable="World"
                    href="/world"
                    tabIndex={-1}
                  >
                    World
                  </a>
                </li>
                <li
                  className="o-header__nav-item"
                >
                  <a
                    className="o-header__nav-link o-header__nav-link--primary"
                    data-trackable="UK"
                    href="/world/uk"
                    tabIndex={-1}
                  >
                    UK
                  </a>
                </li>
                <li
                  className="o-header__nav-item"
                >
                  <a
                    className="o-header__nav-link o-header__nav-link--primary"
                    data-trackable="Companies"
                    href="/companies"
                    tabIndex={-1}
                  >
                    Companies
                  </a>
                </li>
                <li
                  className="o-header__nav-item"
                >
                  <a
                    className="o-header__nav-link o-header__nav-link--primary"
                    data-trackable="Tech"
                    href="/technology"
                    tabIndex={-1}
                  >
                    Tech
                  </a>
                </li>
                <li
                  className="o-header__nav-item"
                >
                  <a
                    className="o-header__nav-link o-header__nav-link--primary"
                    data-trackable="Markets"
                    href="/markets"
                    tabIndex={-1}
                  >
                    Markets
                  </a>
                </li>
                <li
                  className="o-header__nav-item"
                >
                  <a
                    className="o-header__nav-link o-header__nav-link--primary"
                    data-trackable="Graphics"
                    href="/graphics"
                    tabIndex={-1}
                  >
                    Graphics
                  </a>
                </li>
                <li
                  className="o-header__nav-item"
                >
                  <a
                    className="o-header__nav-link o-header__nav-link--primary"
                    data-trackable="Opinion"
                    href="/opinion"
                    tabIndex={-1}
                  >
                    Opinion
                  </a>
                </li>
                <li
                  className="o-header__nav-item"
                >
                  <a
                    className="o-header__nav-link o-header__nav-link--primary"
                    data-trackable="Work & Careers"
                    href="/work-careers"
                    tabIndex={-1}
                  >
                    Work & Careers
                  </a>
                </li>
                <li
                  className="o-header__nav-item"
                >
                  <a
                    className="o-header__nav-link o-header__nav-link--primary"
                    data-trackable="Life & Arts"
                    href="/life-arts"
                    tabIndex={-1}
                  >
                    Life & Arts
                  </a>
                </li>
                <li
                  className="o-header__nav-item"
                >
                  <a
                    className="o-header__nav-link o-header__nav-link--primary"
                    data-trackable="HTSI"
                    href="https://howtospendit.ft.com/"
                    tabIndex={-1}
                  >
                    HTSI
                  </a>
                </li>
              </ul>
            </div>
          </div>
          <a
            className="o-header__top-logo o-header__hide--L"
            data-trackable="logo"
            href="/"
            tabIndex={-1}
            title="Go to Financial Times homepage"
          >
            <span
              className="o-header__visually-hidden"
            >
              Financial Times
            </span>
          </a>
        </div>
        <div
          className="o-header__top-column o-header__top-column--right"
        >
          <a
            className="o-header__top-button o-header__top-button--hide-m"
            data-trackable="Subscribe"
            href="/products?segmentId=#"
            role="button"
            tabIndex={-1}
          >
            Subscribe
          </a>
          <nav
            aria-describedby="dropdown-title"
            className="o-header__dropdown pro_navigation"
            data-o3-brand="professional"
          >
            <button
              aria-controls="dropdown-options"
              aria-label="Dropdown menu has opened on focus, press Tab to access links."
              className="o-header__dropdown-button"
              data-trackable="pro_navigation_toggle_click"
              id="pro_navigation_toggle_sticky"
              tabIndex={-1}
            >
              <div
                className="o-header__dropdown-button-user-icon-wrapper"
              >
                <span
                  aria-hidden="true"
                  className="o-header__dropdown-icon user-icon"
                />
              </div>
              <span
                aria-hidden="true"
                className="o-header__dropdown-icon chevron-icon"
              />
            </button>
            <div
              className="o-header__dropdown-content"
              data-id="dropdown-content"
              id="dropdown-options"
              role="group"
              tabIndex={-1}
            >
              <div
                className="o-header__dropdown-header"
              >
                <span
                  className="o-header__dropdown-title"
                  id="dropdown-title"
                >
                  FT PROFESSIONAL ACCOUNT
                </span>
                <button
                  aria-label="Close dropdown menu"
                  className="o-header__dropdown-close-button-mobile"
                  tabIndex={0}
                />
              </div>
              <ul
                className="o-header__dropdown-list"
              >
                <li
                  className="o-header__dropdown-list-item"
                >
                  <a
                    className="o-header__dropdown-list-item-link"
                    data-trackable="pro_navigation_link-workspace_clicked"
                    data-tracking-key="pro_navigation"
                    href="https://workspace.ft.com/"
                  >
                    <div
                      className="o-header__dropdown-list-item-details-container"
                    >
                      <span
                        aria-hidden="true"
                        className="o-header__dropdown-icon dashboard-icon"
                      />
                      <span>
                        Workspace
                      </span>
                    </div>
                    <div
                      className="o-header__dropdown-list-item-label-container"
                    >
                      <span
                        className="o-header__dropdown-list-pro-label"
                      >
                        FT PROFESSIONAL
                      </span>
                    </div>
                  </a>
                </li>
                <li
                  className="o-header__dropdown-list-item"
                >
                  <a
                    className="o-header__dropdown-list-item-link"
                    data-trackable="pro_navigation_link-myft-feed_clicked"
                    data-tracking-key="pro_navigation"
                    href="https://www.ft.com/myft/following/"
                  >
                    <div
                      className="o-header__dropdown-list-item-details-container"
                    >
                      <span
                        aria-hidden="true"
                        className="o-header__dropdown-icon list-icon"
                      />
                      <span>
                        myFT feed
                      </span>
                    </div>
                  </a>
                </li>
                <li
                  className="o-header__dropdown-list-item o-header__dropdown-list-divider"
                >
                  <a
                    className="o-header__dropdown-list-item-link"
                    data-trackable="pro_navigation_link-mpr_clicked"
                    data-tracking-key="pro_navigation"
                    href="https://professional-monetary-policy-radar.ft.com/"
                  >
                    <div
                      className="o-header__dropdown-list-item-details-container"
                    >
                      <span
                        aria-hidden="true"
                        className="o-header__dropdown-icon radar-icon"
                      />
                      <span>
                        Monetary Policy Radar
                      </span>
                    </div>
                    <div
                      className="o-header__dropdown-list-item-label-container"
                    >
                      <span
                        className="o-header__dropdown-list-pro-label"
                      >
                        FT PROFESSIONAL
                      </span>
                    </div>
                  </a>
                </li>
                <li
                  className="o-header__dropdown-list-item"
                >
                  <a
                    className="o-header__dropdown-list-item-link"
                    data-trackable="pro_navigation_link-saved-articles_clicked"
                    data-tracking-key="pro_navigation"
                    href="https://www.ft.com/myft/saved-articles/"
                  >
                    <div
                      className="o-header__dropdown-list-item-details-container"
                    >
                      <span
                        aria-hidden="true"
                        className="o-header__dropdown-icon bookmark-icon"
                      />
                      <span>
                        Saved articles
                      </span>
                    </div>
                  </a>
                </li>
                <li
                  className="o-header__dropdown-list-item"
                >
                  <a
                    className="o-header__dropdown-list-item-link"
                    data-trackable="pro_navigation_link-highlights_clicked"
                    data-tracking-key="pro_navigation"
                    href="https://highlights-dashboard.ft.com/"
                  >
                    <div
                      className="o-header__dropdown-list-item-details-container"
                    >
                      <span
                        aria-hidden="true"
                        className="o-header__dropdown-icon highlight-icon"
                      />
                      <span>
                        Highlights
                      </span>
                    </div>
                    <div
                      className="o-header__dropdown-list-item-label-container"
                    >
                      <span
                        className="o-header__dropdown-list-pro-label"
                      >
                        FT PROFESSIONAL
                      </span>
                    </div>
                  </a>
                </li>
                <li
                  className="o-header__dropdown-list-item o-header__dropdown-list-divider"
                >
                  <a
                    className="o-header__dropdown-list-item-link"
                    data-trackable="pro_navigation_link-advanced-sharing_clicked"
                    data-tracking-key="pro_navigation"
                    href="https://sharing-dashboard.ft.com/"
                  >
                    <div
                      className="o-header__dropdown-list-item-details-container"
                    >
                      <span
                        aria-hidden="true"
                        className="o-header__dropdown-icon share-icon"
                      />
                      <span>
                        Advanced Sharing
                      </span>
                    </div>
                    <div
                      className="o-header__dropdown-list-item-label-container"
                    >
                      <span
                        className="o-header__dropdown-list-pro-label"
                      >
                        FT PROFESSIONAL
                      </span>
                    </div>
                  </a>
                </li>
                <li
                  className="o-header__dropdown-list-item"
                >
                  <a
                    className="o-header__dropdown-list-item-link"
                    data-trackable="pro_navigation_link-newsletters_clicked"
                    data-tracking-key="pro_navigation"
                    href="https://www.ft.com/newsletters"
                  >
                    <div
                      className="o-header__dropdown-list-item-details-container"
                    >
                      <span
                        aria-hidden="true"
                        className="o-header__dropdown-icon mail-icon"
                      />
                      <span>
                        Newsletters
                      </span>
                    </div>
                  </a>
                </li>
                <li
                  className="o-header__dropdown-list-item"
                >
                  <a
                    className="o-header__dropdown-list-item-link"
                    data-trackable="pro_navigation_link-account-settings_clicked"
                    data-tracking-key="pro_navigation"
                    href="https://www.ft.com/myaccount/personal-details"
                  >
                    <div
                      className="o-header__dropdown-list-item-details-container"
                    >
                      <span
                        aria-hidden="true"
                        className="o-header__dropdown-icon settings-icon"
                      />
                      <span>
                        Account settings
                      </span>
                    </div>
                  </a>
                </li>
                <li
                  className="o-header__dropdown-list-item"
                >
                  <a
                    className="o-header__dropdown-list-item-link"
                    data-trackable="pro_navigation_link-sign-out_clicked"
                    data-tracking-key="pro_navigation"
                    href="https://www.ft.com/logout"
                  >
                    <div
                      className="o-header__dropdown-list-item-details-container"
                    >
                      <span
                        aria-hidden="true"
                        className="o-header__dropdown-icon exit-icon"
                      />
                      <span>
                        Sign out
                      </span>
                    </div>
                  </a>
                </li>
              </ul>
            </div>
          </nav>
        </div>
      </div>
    </div>
  </div>
  <div
    className="o-header__row o-header__search o-header__search--sticky"
    data-o-header-search={true}
    data-trackable="header-search"
    id="o-header-search-sticky"
  >
    <div
      className="o-header__container"
    >
      <form
        action="/search"
        aria-label="Site search"
        className="o-header__search-form"
        data-n-topic-search={true}
        role="search"
      >
        <label
          className="o-header__search-term o-forms-field o-forms-field--optional"
          htmlFor="o-header-search-term-sticky"
        >
          <span
            className="o-forms-title o-header__visually-hidden"
          >
            <span
              className="o-forms-title__main"
            >
              Search the 
              <abbr
                title="Financial Times"
              >
                FT
              </abbr>
            </span>
          </span>
          <span
            className="o-forms-input o-forms-input--text o-forms-input--suffix"
          >
            <input
              aria-controls="suggestions-o-header-search-term-sticky"
              autoCapitalize="off"
              autoComplete="off"
              autoCorrect="off"
              id="o-header-search-term-sticky"
              name="q"
              placeholder="Search for stories, topics or securities"
              role="combobox"
              spellCheck={false}
              type="search"
            />
            <button
              className="o-header__search-submit"
              type="submit"
            >
              <span
                aria-hidden="true"
                className="o-header__search-icon"
              />
              <span>
                Search
              </span>
            </button>
            <button
              aria-controls="o-header-search-sticky"
              className="o-header__search-close o--if-js"
              data-trackable="close"
              title="Close search bar"
              type="button"
            >
              <span
                className="o-header__visually-hidden"
              >
                Close search bar
              </span>
              <span>
                Close
              </span>
            </button>
          </span>
        </label>
      </form>
    </div>
  </div>
</header>
`;

exports[`dotcom-ui-header/src/components/StickyHeader renders as a logged in user 1`] = `
<header
  aria-hidden="true"
  className="o-header o-header--simple o-header--sticky o--if-js"
  data-o-component="o-header"
  data-o-header--sticky={true}
>
  <div
    className="o-header__row o-header__top"
    data-trackable="header-sticky"
  >
    <div
      className="o-header__container"
    >
      <div
        className="o-header__top-wrapper"
      >
        <div
          className="o-header__top-column o-header__top-column--left"
        >
          <a
            aria-controls="o-header-drawer"
            className="o-header__top-icon-link o-header__top-icon-link--menu"
            data-trackable="drawer-toggle"
            href="#"
            tabIndex={-1}
          >
            <span
              className="o-header__top-link-label"
            >
              Menu
            </span>
          </a>
          <a
            aria-controls="o-header-search-sticky"
            className="o-header__top-icon-link o-header__top-icon-link--search"
            data-trackable="search-toggle"
            href="#"
            tabIndex={-1}
          >
            <span
              className="o-header__top-link-label"
            >
              Search
            </span>
          </a>
        </div>
        <div
          className="o-header__top-column o-header__top-column--center"
        >
          <div
            className="o-header__top-takeover"
          >
            <div
              className="o-header__nav"
            >
              <ul
                className="o-header__nav-list o-header__nav-list--left"
                data-trackable="primary-nav"
              >
                <li
                  className="o-header__nav-item"
                >
                  <a
                    className="o-header__nav-link o-header__nav-link--primary"
                    data-trackable="Home"
                    href="/"
                    tabIndex={-1}
                  >
                    Home
                  </a>
                </li>
                <li
                  className="o-header__nav-item"
                >
                  <a
                    className="o-header__nav-link o-header__nav-link--primary"
                    data-trackable="World"
                    href="/world"
                    tabIndex={-1}
                  >
                    World
                  </a>
                </li>
                <li
                  className="o-header__nav-item"
                >
                  <a
                    className="o-header__nav-link o-header__nav-link--primary"
                    data-trackable="UK"
                    href="/world/uk"
                    tabIndex={-1}
                  >
                    UK
                  </a>
                </li>
                <li
                  className="o-header__nav-item"
                >
                  <a
                    className="o-header__nav-link o-header__nav-link--primary"
                    data-trackable="Companies"
                    href="/companies"
                    tabIndex={-1}
                  >
                    Companies
                  </a>
                </li>
                <li
                  className="o-header__nav-item"
                >
                  <a
                    className="o-header__nav-link o-header__nav-link--primary"
                    data-trackable="Tech"
                    href="/technology"
                    tabIndex={-1}
                  >
                    Tech
                  </a>
                </li>
                <li
                  className="o-header__nav-item"
                >
                  <a
                    className="o-header__nav-link o-header__nav-link--primary"
                    data-trackable="Markets"
                    href="/markets"
                    tabIndex={-1}
                  >
                    Markets
                  </a>
                </li>
                <li
                  className="o-header__nav-item"
                >
                  <a
                    className="o-header__nav-link o-header__nav-link--primary"
                    data-trackable="Graphics"
                    href="/graphics"
                    tabIndex={-1}
                  >
                    Graphics
                  </a>
                </li>
                <li
                  className="o-header__nav-item"
                >
                  <a
                    className="o-header__nav-link o-header__nav-link--primary"
                    data-trackable="Opinion"
                    href="/opinion"
                    tabIndex={-1}
                  >
                    Opinion
                  </a>
                </li>
                <li
                  className="o-header__nav-item"
                >
                  <a
                    className="o-header__nav-link o-header__nav-link--primary"
                    data-trackable="Work & Careers"
                    href="/work-careers"
                    tabIndex={-1}
                  >
                    Work & Careers
                  </a>
                </li>
                <li
                  className="o-header__nav-item"
                >
                  <a
                    className="o-header__nav-link o-header__nav-link--primary"
                    data-trackable="Life & Arts"
                    href="/life-arts"
                    tabIndex={-1}
                  >
                    Life & Arts
                  </a>
                </li>
                <li
                  className="o-header__nav-item"
                >
                  <a
                    className="o-header__nav-link o-header__nav-link--primary"
                    data-trackable="HTSI"
                    href="https://howtospendit.ft.com/"
                    tabIndex={-1}
                  >
                    HTSI
                  </a>
                </li>
              </ul>
            </div>
          </div>
          <a
            className="o-header__top-logo o-header__hide--L"
            data-trackable="logo"
            href="/"
            tabIndex={-1}
            title="Go to Financial Times homepage"
          >
            <span
              className="o-header__visually-hidden"
            >
              Financial Times
            </span>
          </a>
        </div>
        <div
          className="o-header__top-column o-header__top-column--right"
        >
          <a
            className="o-header__top-button o-header__top-button--hide-m"
            data-trackable="Subscribe"
            href="/products?segmentId=#"
            role="button"
            tabIndex={-1}
          >
            Subscribe
          </a>
          <a
            className="o-header__top-myaccount"
            data-trackable="My Account"
            href="/myaccount"
            id="o-header-top-link-myaccount"
            tabIndex={-1}
          >
            <span>
              My Account
            </span>
          </a>
        </div>
      </div>
    </div>
  </div>
  <div
    className="o-header__row o-header__search o-header__search--sticky"
    data-o-header-search={true}
    data-trackable="header-search"
    id="o-header-search-sticky"
  >
    <div
      className="o-header__container"
    >
      <form
        action="/search"
        aria-label="Site search"
        className="o-header__search-form"
        data-n-topic-search={true}
        role="search"
      >
        <label
          className="o-header__search-term o-forms-field o-forms-field--optional"
          htmlFor="o-header-search-term-sticky"
        >
          <span
            className="o-forms-title o-header__visually-hidden"
          >
            <span
              className="o-forms-title__main"
            >
              Search the 
              <abbr
                title="Financial Times"
              >
                FT
              </abbr>
            </span>
          </span>
          <span
            className="o-forms-input o-forms-input--text o-forms-input--suffix"
          >
            <input
              aria-controls="suggestions-o-header-search-term-sticky"
              autoCapitalize="off"
              autoComplete="off"
              autoCorrect="off"
              id="o-header-search-term-sticky"
              name="q"
              placeholder="Search for stories, topics or securities"
              role="combobox"
              spellCheck={false}
              type="search"
            />
            <button
              className="o-header__search-submit"
              type="submit"
            >
              <span
                aria-hidden="true"
                className="o-header__search-icon"
              />
              <span>
                Search
              </span>
            </button>
            <button
              aria-controls="o-header-search-sticky"
              className="o-header__search-close o--if-js"
              data-trackable="close"
              title="Close search bar"
              type="button"
            >
              <span
                className="o-header__visually-hidden"
              >
                Close search bar
              </span>
              <span>
                Close
              </span>
            </button>
          </span>
        </label>
      </form>
    </div>
  </div>
</header>
`;

exports[`dotcom-ui-header/src/components/StickyHeader renders as an anonymous user 1`] = `
<header
  aria-hidden="true"
  className="o-header o-header--simple o-header--sticky o--if-js"
  data-o-component="o-header"
  data-o-header--sticky={true}
>
  <div
    className="o-header__row o-header__top"
    data-trackable="header-sticky"
  >
    <div
      className="o-header__container"
    >
      <div
        className="o-header__top-wrapper"
      >
        <div
          className="o-header__top-column o-header__top-column--left"
        >
          <a
            aria-controls="o-header-drawer"
            className="o-header__top-icon-link o-header__top-icon-link--menu"
            data-trackable="drawer-toggle"
            href="#"
            tabIndex={-1}
          >
            <span
              className="o-header__top-link-label"
            >
              Menu
            </span>
          </a>
          <a
            aria-controls="o-header-search-sticky"
            className="o-header__top-icon-link o-header__top-icon-link--search"
            data-trackable="search-toggle"
            href="#"
            tabIndex={-1}
          >
            <span
              className="o-header__top-link-label"
            >
              Search
            </span>
          </a>
        </div>
        <div
          className="o-header__top-column o-header__top-column--center"
        >
          <div
            className="o-header__top-takeover"
          >
            <div
              className="o-header__nav"
            >
              <ul
                className="o-header__nav-list o-header__nav-list--left"
                data-trackable="primary-nav"
              >
                <li
                  className="o-header__nav-item"
                >
                  <a
                    className="o-header__nav-link o-header__nav-link--primary"
                    data-trackable="Home"
                    href="/"
                    tabIndex={-1}
                  >
                    Home
                  </a>
                </li>
                <li
                  className="o-header__nav-item"
                >
                  <a
                    className="o-header__nav-link o-header__nav-link--primary"
                    data-trackable="World"
                    href="/world"
                    tabIndex={-1}
                  >
                    World
                  </a>
                </li>
                <li
                  className="o-header__nav-item"
                >
                  <a
                    className="o-header__nav-link o-header__nav-link--primary"
                    data-trackable="UK"
                    href="/world/uk"
                    tabIndex={-1}
                  >
                    UK
                  </a>
                </li>
                <li
                  className="o-header__nav-item"
                >
                  <a
                    className="o-header__nav-link o-header__nav-link--primary"
                    data-trackable="Companies"
                    href="/companies"
                    tabIndex={-1}
                  >
                    Companies
                  </a>
                </li>
                <li
                  className="o-header__nav-item"
                >
                  <a
                    className="o-header__nav-link o-header__nav-link--primary"
                    data-trackable="Tech"
                    href="/technology"
                    tabIndex={-1}
                  >
                    Tech
                  </a>
                </li>
                <li
                  className="o-header__nav-item"
                >
                  <a
                    className="o-header__nav-link o-header__nav-link--primary"
                    data-trackable="Markets"
                    href="/markets"
                    tabIndex={-1}
                  >
                    Markets
                  </a>
                </li>
                <li
                  className="o-header__nav-item"
                >
                  <a
                    className="o-header__nav-link o-header__nav-link--primary"
                    data-trackable="Graphics"
                    href="/graphics"
                    tabIndex={-1}
                  >
                    Graphics
                  </a>
                </li>
                <li
                  className="o-header__nav-item"
                >
                  <a
                    className="o-header__nav-link o-header__nav-link--primary"
                    data-trackable="Opinion"
                    href="/opinion"
                    tabIndex={-1}
                  >
                    Opinion
                  </a>
                </li>
                <li
                  className="o-header__nav-item"
                >
                  <a
                    className="o-header__nav-link o-header__nav-link--primary"
                    data-trackable="Work & Careers"
                    href="/work-careers"
                    tabIndex={-1}
                  >
                    Work & Careers
                  </a>
                </li>
                <li
                  className="o-header__nav-item"
                >
                  <a
                    className="o-header__nav-link o-header__nav-link--primary"
                    data-trackable="Life & Arts"
                    href="/life-arts"
                    tabIndex={-1}
                  >
                    Life & Arts
                  </a>
                </li>
                <li
                  className="o-header__nav-item"
                >
                  <a
                    className="o-header__nav-link o-header__nav-link--primary"
                    data-trackable="HTSI"
                    href="https://howtospendit.ft.com/"
                    tabIndex={-1}
                  >
                    HTSI
                  </a>
                </li>
              </ul>
            </div>
          </div>
          <a
            className="o-header__top-logo o-header__hide--L"
            data-trackable="logo"
            href="/"
            tabIndex={-1}
            title="Go to Financial Times homepage"
          >
            <span
              className="o-header__visually-hidden"
            >
              Financial Times
            </span>
          </a>
        </div>
        <div
          className="o-header__top-column o-header__top-column--right"
        >
          <a
            className="o-header__top-button o-header__top-button--hide-m"
            data-trackable="Subscribe"
            href="/products?segmentId=#"
            role="button"
            tabIndex={-1}
          >
            Subscribe
          </a>
          <a
            className="o-header__top-myaccount"
            data-trackable="Sign In"
            href="/login?location=#"
            id="o-header-top-link-signin"
            tabIndex={-1}
          >
            <span>
              Sign In
            </span>
          </a>
        </div>
      </div>
    </div>
  </div>
  <div
    className="o-header__row o-header__search o-header__search--sticky"
    data-o-header-search={true}
    data-trackable="header-search"
    id="o-header-search-sticky"
  >
    <div
      className="o-header__container"
    >
      <form
        action="/search"
        aria-label="Site search"
        className="o-header__search-form"
        data-n-topic-search={true}
        role="search"
      >
        <label
          className="o-header__search-term o-forms-field o-forms-field--optional"
          htmlFor="o-header-search-term-sticky"
        >
          <span
            className="o-forms-title o-header__visually-hidden"
          >
            <span
              className="o-forms-title__main"
            >
              Search the 
              <abbr
                title="Financial Times"
              >
                FT
              </abbr>
            </span>
          </span>
          <span
            className="o-forms-input o-forms-input--text o-forms-input--suffix"
          >
            <input
              aria-controls="suggestions-o-header-search-term-sticky"
              autoCapitalize="off"
              autoComplete="off"
              autoCorrect="off"
              id="o-header-search-term-sticky"
              name="q"
              placeholder="Search for stories, topics or securities"
              role="combobox"
              spellCheck={false}
              type="search"
            />
            <button
              className="o-header__search-submit"
              type="submit"
            >
              <span
                aria-hidden="true"
                className="o-header__search-icon"
              />
              <span>
                Search
              </span>
            </button>
            <button
              aria-controls="o-header-search-sticky"
              className="o-header__search-close o--if-js"
              data-trackable="close"
              title="Close search bar"
              type="button"
            >
              <span
                className="o-header__visually-hidden"
              >
                Close search bar
              </span>
              <span>
                Close
              </span>
            </button>
          </span>
        </label>
      </form>
    </div>
  </div>
</header>
`;

exports[`dotcom-ui-header/src/components/StickyHeader renders restart subscription button when showRestartSubscriptionButton is true 1`] = `
<header
  aria-hidden="true"
  className="o-header o-header--simple o-header--sticky o--if-js"
  data-o-component="o-header"
  data-o-header--sticky={true}
>
  <div
    className="o-header__row o-header__top"
    data-trackable="header-sticky"
  >
    <div
      className="o-header__container"
    >
      <div
        className="o-header__top-wrapper"
      >
        <div
          className="o-header__top-column o-header__top-column--left"
        >
          <a
            aria-controls="o-header-drawer"
            className="o-header__top-icon-link o-header__top-icon-link--menu"
            data-trackable="drawer-toggle"
            href="#"
            tabIndex={-1}
          >
            <span
              className="o-header__top-link-label"
            >
              Menu
            </span>
          </a>
          <a
            aria-controls="o-header-search-sticky"
            className="o-header__top-icon-link o-header__top-icon-link--search"
            data-trackable="search-toggle"
            href="#"
            tabIndex={-1}
          >
            <span
              className="o-header__top-link-label"
            >
              Search
            </span>
          </a>
        </div>
        <div
          className="o-header__top-column o-header__top-column--center"
        >
          <div
            className="o-header__top-takeover"
          >
            <div
              className="o-header__nav"
            >
              <ul
                className="o-header__nav-list o-header__nav-list--left"
                data-trackable="primary-nav"
              >
                <li
                  className="o-header__nav-item"
                >
                  <a
                    className="o-header__nav-link o-header__nav-link--primary"
                    data-trackable="Home"
                    href="/"
                    tabIndex={-1}
                  >
                    Home
                  </a>
                </li>
                <li
                  className="o-header__nav-item"
                >
                  <a
                    className="o-header__nav-link o-header__nav-link--primary"
                    data-trackable="World"
                    href="/world"
                    tabIndex={-1}
                  >
                    World
                  </a>
                </li>
                <li
                  className="o-header__nav-item"
                >
                  <a
                    className="o-header__nav-link o-header__nav-link--primary"
                    data-trackable="UK"
                    href="/world/uk"
                    tabIndex={-1}
                  >
                    UK
                  </a>
                </li>
                <li
                  className="o-header__nav-item"
                >
                  <a
                    className="o-header__nav-link o-header__nav-link--primary"
                    data-trackable="Companies"
                    href="/companies"
                    tabIndex={-1}
                  >
                    Companies
                  </a>
                </li>
                <li
                  className="o-header__nav-item"
                >
                  <a
                    className="o-header__nav-link o-header__nav-link--primary"
                    data-trackable="Tech"
                    href="/technology"
                    tabIndex={-1}
                  >
                    Tech
                  </a>
                </li>
                <li
                  className="o-header__nav-item"
                >
                  <a
                    className="o-header__nav-link o-header__nav-link--primary"
                    data-trackable="Markets"
                    href="/markets"
                    tabIndex={-1}
                  >
                    Markets
                  </a>
                </li>
                <li
                  className="o-header__nav-item"
                >
                  <a
                    className="o-header__nav-link o-header__nav-link--primary"
                    data-trackable="Graphics"
                    href="/graphics"
                    tabIndex={-1}
                  >
                    Graphics
                  </a>
                </li>
                <li
                  className="o-header__nav-item"
                >
                  <a
                    className="o-header__nav-link o-header__nav-link--primary"
                    data-trackable="Opinion"
                    href="/opinion"
                    tabIndex={-1}
                  >
                    Opinion
                  </a>
                </li>
                <li
                  className="o-header__nav-item"
                >
                  <a
                    className="o-header__nav-link o-header__nav-link--primary"
                    data-trackable="Work & Careers"
                    href="/work-careers"
                    tabIndex={-1}
                  >
                    Work & Careers
                  </a>
                </li>
                <li
                  className="o-header__nav-item"
                >
                  <a
                    className="o-header__nav-link o-header__nav-link--primary"
                    data-trackable="Life & Arts"
                    href="/life-arts"
                    tabIndex={-1}
                  >
                    Life & Arts
                  </a>
                </li>
                <li
                  className="o-header__nav-item"
                >
                  <a
                    className="o-header__nav-link o-header__nav-link--primary"
                    data-trackable="HTSI"
                    href="https://howtospendit.ft.com/"
                    tabIndex={-1}
                  >
                    HTSI
                  </a>
                </li>
              </ul>
            </div>
          </div>
          <a
            className="o-header__top-logo o-header__hide--L"
            data-trackable="logo"
            href="/"
            tabIndex={-1}
            title="Go to Financial Times homepage"
          >
            <span
              className="o-header__visually-hidden"
            >
              Financial Times
            </span>
          </a>
        </div>
        <div
          className="o-header__top-column o-header__top-column--right"
        >
          <a
            className="o-header__top-button o3-button o3-button--primary o3-button--small o-header__top-button--hide-m"
            data-trackable="Restart Subscription"
            href="/myaccount/subscription"
            role="button"
            tabIndex={-1}
          >
            Restart Subscription
          </a>
          <a
            className="o-header__top-button o-header__top-button--hide-m"
            data-trackable="Subscribe"
            href="/products?segmentId=#"
            role="button"
            tabIndex={-1}
          >
            Subscribe
          </a>
          <a
            className="o-header__top-myaccount"
            data-trackable="My Account"
            href="/myaccount"
            id="o-header-top-link-myaccount"
            tabIndex={-1}
          >
            <span>
              My Account
            </span>
          </a>
        </div>
      </div>
    </div>
  </div>
  <div
    className="o-header__row o-header__search o-header__search--sticky"
    data-o-header-search={true}
    data-trackable="header-search"
    id="o-header-search-sticky"
  >
    <div
      className="o-header__container"
    >
      <form
        action="/search"
        aria-label="Site search"
        className="o-header__search-form"
        data-n-topic-search={true}
        role="search"
      >
        <label
          className="o-header__search-term o-forms-field o-forms-field--optional"
          htmlFor="o-header-search-term-sticky"
        >
          <span
            className="o-forms-title o-header__visually-hidden"
          >
            <span
              className="o-forms-title__main"
            >
              Search the 
              <abbr
                title="Financial Times"
              >
                FT
              </abbr>
            </span>
          </span>
          <span
            className="o-forms-input o-forms-input--text o-forms-input--suffix"
          >
            <input
              aria-controls="suggestions-o-header-search-term-sticky"
              autoCapitalize="off"
              autoComplete="off"
              autoCorrect="off"
              id="o-header-search-term-sticky"
              name="q"
              placeholder="Search for stories, topics or securities"
              role="combobox"
              spellCheck={false}
              type="search"
            />
            <button
              className="o-header__search-submit"
              type="submit"
            >
              <span
                aria-hidden="true"
                className="o-header__search-icon"
              />
              <span>
                Search
              </span>
            </button>
            <button
              aria-controls="o-header-search-sticky"
              className="o-header__search-close o--if-js"
              data-trackable="close"
              title="Close search bar"
              type="button"
            >
              <span
                className="o-header__visually-hidden"
              >
                Close search bar
              </span>
              <span>
                Close
              </span>
            </button>
          </span>
        </label>
      </form>
    </div>
  </div>
</header>
`;
